--- a/.github/workflows/greetings.yml
+++ b/.github/workflows/greetings.yml
@@ -11,7 +11,8 @@ on:
         - cschleiden
 jobs:
   greeting:
-    uses: kyoroff/action-ci-cd/./github/workflows/_helloWorld.yml@main
     runs-on: ubuntu-latest
-    with:
-      name: ${{ inputs.name }}
+    steps:
+      - uses: kyoroff/action-ci-cd/./github/workflows/_helloWorld.yml@main
+        with:
+          name: ${{ inputs.name }}
