--- a/.github/workflows/greetings.yml
+++ b/.github/workflows/greetings.yml
@@ -11,8 +11,6 @@ on:
         - cschleiden
 jobs:
   greeting:
-    runs-on: ubuntu-latest
-    steps:
-      - uses: kyoroff/action-ci-cd/./github/workflows/_helloWorld.yml@main
-        with:
-          name: ${{ inputs.name }}
+    uses: kyoroff/action-ci-cd/./github/workflows/_helloWorld.yml@main
+    with:
+      name: ${{ inputs.name }}
