--- a/.github/workflows/deployFunction.yml
+++ b/.github/workflows/deployFunction.yml
@@ -9,9 +9,12 @@ permissions:
 
 jobs:
   deploy_function:
-    environment: enterprise
     uses: kyoroff/action-ci-cd/.github/workflows/_functionAppDeploy.yml@main
     with:
       python_version: '3.10'
       dir: 'HttpExample'
       function_name: 'sc16nskdemoapp0012'
+    secrets:
+      AZURE_TENANT_ID: ${{ secrets.AZURE_TENANT_ID }}
+      AZURE_CLIENT_ID: ${{ secrets.AZURE_CLIENT_ID }}
+      AZURE_SUBSCRIPTION_ID: ${{ secrets.AZURE_SUBSCRIPTION_ID }}
